Content view on mobile devices fixed

--- a/css/styles.less
+++ b/css/styles.less
@@ -567,7 +567,7 @@ body {
                         max-width: 940px;
                         min-width: 580px;
                         margin: auto;
-                        padding: 64px 20px 0;
+                        padding: 64px 20px 50px;
                     }
                 }
             }
