--- a/css/themes/common.less
+++ b/css/themes/common.less
@@ -220,7 +220,9 @@ body {
     margin: 15px 0;
 
     .column {
+        display: inline-block;
         padding: 0 20px;
+        vertical-align: top;
 
         &:first-child {
             padding-left: 0;
@@ -230,33 +232,52 @@ body {
             padding-right: 0;
         }
 
-        @media (max-width: 768px) {
-        /* three items */
+        /* two columns */
+        &:nth-child(1):nth-last-child(2),
+        &:nth-child(2):nth-last-child(1) {
+            width: 50%;
+        }
+
+        /* three columns */
         &:nth-child(1):nth-last-child(3),
         &:nth-child(2):nth-last-child(2),
         &:nth-child(3):nth-last-child(1) {
-            width: 100% !important;
-            padding: 0;
+            width: 33%;
         }
 
-        &:nth-child(1):nth-last-child(3),
-        &:nth-child(2):nth-last-child(2) {
-            margin-bottom: 30px;
-        }
-    }
+        @media (max-width: 768px) {
+            /* three columns */
+            &:nth-child(1):nth-last-child(3),
+            &:nth-child(2):nth-last-child(2),
+            &:nth-child(3):nth-last-child(1) {
+                width: 100% !important;
+                padding: 0;
+            }
 
-    @media (max-width: 640px) {
-        /* two items */
-        &:nth-child(1):nth-last-child(2),
-        &:nth-child(2):nth-last-child(1) {
-            width: 100% !important;
-            padding: 0;
+            &:nth-child(1):nth-last-child(3),
+            &:nth-child(2):nth-last-child(2) {
+                margin-bottom: 30px;
+            }
         }
 
-        &:nth-child(1):nth-last-child(2) {
-            margin-bottom: 30px;
+        @media (max-width: 640px) {
+            /* two columns */
+            &:nth-child(1):nth-last-child(2),
+            &:nth-child(2):nth-last-child(1) {
+                width: 100% !important;
+                padding: 0;
+            }
+
+            &:nth-child(1):nth-last-child(2) {
+                margin-bottom: 30px;
+            }
         }
-    }
+
+        .row {
+            &:not(:last-child) {
+                margin-bottom: 15px;
+            }
+        }
     }
 
     .image-wrapper {
